Mon Nov 28 10:49:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * MPC/config/taobaseidldefaults.mpb:
          Handle the S extension also manually, needed when using -oS

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_ch.cpp:
        * TAO_IDL/be/be_visitor_interface/interface_cs.cpp:
          When generating CORBA::Policy add some special methods

        * tao/AnyTypeCode/AnyTypeCode.mpc:
        * tao/PolicyS.h:
        * tao/PortableServer/PortableServer.mpc:
        * tao/tao.mpc:
          Generate the Policy.pidl as part of the build process, prevents
          us from doing manual hacks in the generated code

        * tao/AnyTypeCode/PolicyA.h:
        * tao/AnyTypeCode/PolicyA.cpp:
        * tao/PolicyC.h:
        * tao/PolicyC.inl:
        * tao/PolicyC.cpp:
        * tao/PortableServer/PolicyS.h:
        * tao/PortableServer/PolicyS.cpp:
        * tao/PortableServer/PolicyS_T.h:
        * tao/PortableServer/PolicyS_T.inl:
        * tao/PortableServer/PolicyS_T.cpp:
          Removed these files.

Mon Nov 28 08:26:29 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_component/facet_svth.cpp:
        * TAO_IDL/be/be_visitor_component/facet_svts.cpp:
        * TAO_IDL/be_include/be_visitor_component/facet_svth.h:
        * TAO_IDL/be_include/be_visitor_component/facet_svts.h:
        * TAO_IDL/be_include/be_visitor_root/root_svth.h:
          Fuzz.

Sun Nov 27 18:19:18 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        Merging in another set of changes. The skeletons got refactored even
        more and now the S.inl files are not generated anymore. For CIAO
        we now generate the facet servants in new _svnt_T.{h,cpp} files, which
        is the first step in a major refactoring and simplification of the
        CCM servants which is also a first step in the direction of a Common
        Component Model

        === start changelog ===
