@@ -112,17 +112,21 @@ public:
   /// Local implementation of the CORBA::Object::_is_a method.
   virtual CORBA::Boolean _is_a (const char *logical_type_id);
 
+#if (TAO_HAS_MINIMUM_CORBA == 0)
   /// Default _non_existent: always returns false.
   virtual CORBA::Boolean _non_existent (void);
 
   /// Query the Interface Repository for the interface definition.
   virtual CORBA::InterfaceDef_ptr _get_interface (void);
 
+#if !defined (CORBA_E_COMPACT) && !defined (CORBA_E_MICRO)
   /// Default _get_component: always returns CORBA::Object::_nil().
   virtual CORBA::Object_ptr _get_component (void);
+#endif
 
   /// Get the repository id.
   virtual char * _repository_id (void);
+#endif /* TAO_HAS_MINIMUM_CORBA */
 
   /// This is an auxiliary method for _this() and _narrow().
   virtual TAO_Stub *_create_stub (void);
