@@ -1,3 +1,10 @@
+Mon Nov 28 12:28:14 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * tao/PortableServer/Servant_Base.h:
+        * tao/PortableServer/Servant_Base.cpp:
+          Disable serveral methods with CORBA/e or minimum corba, fixes
+          bugzilla 3019
+
 Mon Nov 28 10:49:43 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * MPC/config/taobaseidldefaults.mpb:
